# target-clickhouse

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  docker_run_clickhouse.sh  gen_ssh_tunnel_test_key.sh  pyproject.toml  tox.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_workflow.yml  release.yml
target_clickhouse/: arrow_batch.py  connectors.py  engine_class.py  sinks.py  ssh_tunnel.py  target.py
tests/: conftest.py  target_test_cases.py  test_batch_bytes.py  test_column_quoting.py  test_core.py  test_engine_fallback.py  test_json_type.py  test_jsonschema_to_sql.py  test_nullable_types.py  test_retry.py  test_ssh_tunnel.py  test_upsert_dedup.py  test_url_encoding.py  test_validation.py
tests/arrow/: test_batch.py  test_batch_dispatch.py  test_batch_live.py
tests/fixtures/ssh_tunnel/custom-cont-init.d/: allow-tcp-forwarding.sh
