[project]
name = "target-clickhouse"
dynamic = [ "version" ]
description = "`target-clickhouse` is a Singer target for clickhouse, built with the Meltano Singer SDK."
authors = [{ name = "Ben Theunissen" }]
maintainers = [{ name = "Meltano" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "clickhouse",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "singer-sdk~=0.54.5",
    "clickhouse-sqlalchemy @ git+https://github.com/xzkostyan/clickhouse-sqlalchemy.git@25721c3cd6e094ae1853327ab1de3a5d7144acbd",
    "clickhouse-connect>=0.7",
    "paramiko>=4",
    "python-backoff>=2.3",
    "simplejson~=4.1",
    "packaging>=24.0",
    "pyarrow~=25.0",
    "clickhouse-driver>=0.2.10",
]

[project.optional-dependencies]
s3 = ["s3fs>=2026.6.0"]

[project.scripts]
target-clickhouse = "target_clickhouse.target:TargetClickhouse.cli"

[dependency-groups]
dev = [
    "pytest>=9",
    "tox>=4",
    "ruff>=0.15",
    "singer-sdk[testing]~=0.54.5",
    "types-simplejson>=3.19",
    "types-setuptools>=83",
    "pre-commit>=4",
    "testcontainers[clickhouse]>=4.15.0rc4",
    "ty>=0.0.61",
    "mypy>=2.3.0",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = [ "target_clickhouse" ]

[tool.hatch.build.targets.wheel]
include = [ "target_clickhouse" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
fallback-version = "0.0.0dev0"
source = "vcs"

[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = [
    "ANN001", # missing-return-type
    "ANN201",  # missing-return-type-doc
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D401", # First line should be in imperative mood
    "D407", # Missing dashed underline after section
    "FA100", # Forbidden import
    "S101", # Use of assert detected
    "G004", # Logging statement uses string formatting
    "TC002",
    "TC003",
    "ANN202",
    "C901",
    "TRY201", # Use of bare 'except'
    "D417",
    "ANN003",
    "FBT001",
    "FBT002",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_clickhouse"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "INP001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.pytest]
minversion = "9"
filterwarnings = [
    "error",
]

[tool.mypy]
warn_redundant_casts = true
